--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-md-12" id="slogan">
           <ul id="navigation">
-            <li id="nav-logo"><a href="#"><img src="./imgsrc/logo2.png"></img></a></li>
+            <li id="nav-logo"><a href="#"><img src="/imgsrc/logo2.png"></img></a></li>
             <li><a href="#">了解明传</a></li>
             <li><a href="#">新闻中心</a></li>
             <li><a href="#">产品中心</a></li>
@@ -76,22 +76,46 @@
             <li><a href="#">联系我们</a></li>
           </ul>
           <div style="clear: both;"></div>
-          <p>　</p>
-          <p>　</p>
-          <p>　</p>
-          <p>　</p>
-          <h1>湖北明磊传动轴有限公司</h1>
-          <p>　</p>
-          <p>　</p>
-          <h2>专业优质的传动机械制造商，为您的需求而设计</h2>
-          <p>　</p>
-          <p>　</p>
-          <p>　</p>
-          <p>　</p>
-          <p>　</p>
-          <p>　</p>
         </div>
       </div>
+    </div>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" id="caro">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="/imgsrc/transformer1.jpg" alt="..."></img>
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+        <div class="item">
+          <img src="/imgsrc/transformer4.jpg" alt="..."></img>
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+        <div class="item">
+          <img src="/imgsrc/transformer3.jpg" alt="..."></img>
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+      </div>
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
 
@@ -593,6 +617,10 @@
           $("#nav").fadeOut(100);
         }
       });
+      $('.carousel').carousel({
+        interval: 2000,
+        pause: ''
+      })
     });
   </script>
 </body>
